[package]
name = "rust-algorand-sdk"
version = "0.1.0"
authors = ["Perfect Makanju <damiperfect@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.13.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_bytes = "0.11.2"
ed25519-dalek = { version = "1.0.0-pre.1", features = ["serde"] }
failure = { version = "0.1.5" }
sha2 = "0.8.0"
rand = "0.6"
base32 = "0.4.0"
base64 = "0.10.1"